--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.4",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
+    "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
